# CmakeProject

./: .gitignore  .swp  Activity1.nvact  CMakeCache.txt  CMakeLists.txt  CMakeProject2.cu  Makefile  a.out  cmake_install.cmake  parallel.cu  parallel00 (2).cu  parallel00.cu  parallel000_v1.cu  parallel000_v3.cu  parallel00_v1.cu  parallel00_v1d.cu  parallel00_v2.cu  parallel00_v3.cu  parallel00_v4.cu  parallel00_v5.cu  parallel01.cu  parallel01_ic.cu  parallel01_im.cu  parallel01_sc.cu  parallel01_sm.cu  parallel01_smn.cu  parallel01_v1.cu  parallel01_v2.cu  parallel10.cu  parallel10_n.cu  parallel11.cu  parallel11_v1.cu  parallel11_v2.cu  serial.c  serial_v1.c  serial_v2.c  serial_v3.c  serial_v4.c
