CMAKE_MINIMUM_REQUIRED (VERSION 3.16 FATAL_ERROR)

PROJECT ("parallel00_v1" LANGUAGES CXX CUDA)
PROJECT ("parallel00_v2" LANGUAGES CXX CUDA)
PROJECT ("parallel00_v3" LANGUAGES CXX CUDA)
PROJECT ("parallel00_v4" LANGUAGES CXX CUDA)

INCLUDE(FindCUDA)

CUDA_SELECT_NVCC_ARCH_FLAGS(CUDA_ARCH_FLAGS)
IF(WIDTH)
	add_compile_definitions(WIDTH=${WIDTH})
	add_compile_definitions(IMGPATH="${IMGPATH}")
	add_compile_definitions(IT=${IT})
endif()
ADD_EXECUTABLE ("parallel00_v1" "parallel00_v1.cu" )
ADD_EXECUTABLE ("parallel00_v2" "parallel00_v2.cu" )
ADD_EXECUTABLE ("parallel00_v3" "parallel00_v3.cu" )
ADD_EXECUTABLE ("parallel00_v4" "parallel00_v4.cu" )

if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
	set(CMAKE_CXX_FLAGS_RELEASE "-O2")
	set(CMAKE_C_FLAGS_RELEASE "-O2")
endif()
TARGET_COMPILE_OPTIONS("parallel00_v1" PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:${CUDA_ARCH_FLAGS}>)
TARGET_INCLUDE_DIRECTORIES("parallel00_v1" PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
TARGET_COMPILE_OPTIONS("parallel00_v2" PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:${CUDA_ARCH_FLAGS}>)
TARGET_INCLUDE_DIRECTORIES("parallel00_v2" PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
TARGET_COMPILE_OPTIONS("parallel00_v3" PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:${CUDA_ARCH_FLAGS}>)
TARGET_INCLUDE_DIRECTORIES("parallel00_v3" PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
TARGET_COMPILE_OPTIONS("parallel00_v4" PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:${CUDA_ARCH_FLAGS}>)
TARGET_INCLUDE_DIRECTORIES("parallel00_v4" PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})

