CMAKE_MINIMUM_REQUIRED (VERSION 3.16 FATAL_ERROR)

PROJECT ("parallel01_v1" LANGUAGES CXX CUDA)
PROJECT ("parallel01_v2" LANGUAGES CXX CUDA)

INCLUDE(FindCUDA)

CUDA_SELECT_NVCC_ARCH_FLAGS(CUDA_ARCH_FLAGS)
IF(WIDTH)
	add_compile_definitions(WIDTH=${WIDTH})
	add_compile_definitions(IMGPATH="${IMGPATH}")
	add_compile_definitions(IT=${IT})
endif()
ADD_EXECUTABLE ("parallel01_v1" "parallel01_v1.cu" )
ADD_EXECUTABLE ("parallel01_v2" "parallel01_v2.cu" )

if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
	set(CMAKE_CXX_FLAGS_RELEASE "-O2")
	set(CMAKE_C_FLAGS_RELEASE "-O2")
	set_property(TARGET serial PROPERTY C_STANDARD 99)
	TARGET_LINK_LIBRARIES("serial" m)
endif()
TARGET_COMPILE_OPTIONS("parallel01_v1" PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:${CUDA_ARCH_FLAGS}>)
TARGET_INCLUDE_DIRECTORIES("parallel01_v1" PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
TARGET_COMPILE_OPTIONS("parallel01_V2" PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:${CUDA_ARCH_FLAGS}>)
TARGET_INCLUDE_DIRECTORIES("parallel01_v2" PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
